syntax = "proto3";
package bitchain.aggregate.v1;

option go_package = "github.com/bitdao-io/bitchain/x/aggregate/types";

import "bitchain/aggregate/v1/aggregate.proto";
import "gogoproto/gogo.proto";

// GenesisState defines the module's genesis state
message GenesisState {
  // module parameters
  Params params = 1 [ (gogoproto.nullable) = false ];
  // registered token pairs
  repeated TokenPair token_pairs = 2 [ (gogoproto.nullable) = false ];
}

// Params defines the aggregate module params
message Params {
  // parameter to enable the intrarelaying of Cosmos coins <--> ERC20 tokens
  bool enable_aggregate = 1;
  // parameter to enable the EVM hook to convert an ERC20 token to a Cosmos
  // Coin by transferring the Tokens through a MsgEthereumTx to the
  // ModuleAddress Ethereum address.
  bool enable_evm_hook = 2 [ (gogoproto.customname) = "EnableEVMHook" ];
}
