syntax = "proto3";
package teleport.aggregate.v1;

option go_package = "github.com/teleport-network/teleport/x/aggregate/types";

import "cosmos/base/query/v1beta1/pagination.proto";
import "teleport/aggregate/v1/genesis.proto";
import "teleport/aggregate/v1/aggregate.proto";
import "google/api/annotations.proto";
import "gogoproto/gogo.proto";

// Query defines the gRPC querier service
service Query {
  // TokenPairs retrieves registered token pairs
  rpc TokenPairs(QueryTokenPairsRequest) returns (QueryTokenPairsResponse) {
    option (google.api.http).get = "/teleport/aggregate/v1/token_pairs";
  }

  // TokenPair retrieves a registered token pair
  rpc TokenPair(QueryTokenPairRequest) returns (QueryTokenPairResponse) {
    option (google.api.http).get = "/teleport/aggregate/v1/token_pairs/{token}";
  }

  // Params retrieves the aggregate module params
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/teleport/aggregate/v1/params";
  }
}

// QueryTokenPairsRequest is the request type for the Query/TokenPairs RPC
// method
message QueryTokenPairsRequest {
  // pagination defines an optional pagination for the request
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryTokenPairsResponse is the response type for the Query/TokenPairs RPC
// method
message QueryTokenPairsResponse {
  repeated TokenPair token_pairs = 1 [ (gogoproto.nullable) = false ];
  // pagination defines the pagination in the response
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryTokenPairRequest is the request type for the Query/TokenPair RPC method
message QueryTokenPairRequest {
  // token identifier can be either the hex contract address of the ERC20 or the
  // Cosmos base denomination
  string token = 1;
}

// QueryTokenPairResponse is the response type for the Query/TokenPair RPC
// method
message QueryTokenPairResponse {
  TokenPair token_pair = 1 [ (gogoproto.nullable) = false ];
}

// QueryParamsRequest is the request type for the Query/Params RPC method
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method
message QueryParamsResponse {
  Params params = 1 [ (gogoproto.nullable) = false ];
}
